kubernetes/apps/flux-system/addons/webhooks/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: flux-webhook
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`flux-webhook.${SECRET_DOMAIN}`) && PathPrefix(`/hook/`)
      middlewares:
        - name: flux-webhook
      services:
        - name: webhook-receiver
          port: 80
          namespace: flux-system
  # tls: {}
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
